fixed: Home fixed to be responsive on small devices

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -5,6 +5,7 @@
     width: 90vw;
     height: 90vh;
     margin: auto; 
+    overflow-x: hidden;
 }
 
 .main-header{
